--- a/air_firmware/.vscode/settings.json
+++ b/air_firmware/.vscode/settings.json
@@ -65,7 +65,8 @@
     "idf.adapterTargetName": "esp32",
     "idf.portWin": "COM5",
     "idf.openOcdConfigs": [
-        "board/esp32-wrover-kit-3.3v.cfg"
+        "board/esp32-bridge.cfg"
     ],
-    "idf.flashType": "UART"
+    "idf.flashType": "UART",
+    "idf.port": "/dev/cu.usbserial-130"
 }
